<resources>
    <string name="app_name">VerificaMTC</string>
    <string name="dni">DNI</string>
    <string name="login">Login</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrado">No registrado aun? Registrese Ahora</string>
    <string name="nombres">Nombres</string>
    <string name="correo">Correo</string>
    <string name="userlogin">Iniciar Sesión como Usuario</string>
    <string name="adminlogin">Iniciar Sesión como Administrador</string>
    <string name="adminloginstr">Iniciar Sesion \ncomo Administrador</string>
    <string name="userloginstr">Iniciar Sesion como Usuario</string>
</resources>