<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:id="@+id/main"
    android:gravity="center"
    android:background="@drawable/registerbackground">
    <View
        android:layout_width="match_parent"
        android:layout_height="80dp" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editttext">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

            <EditText
                android:id="@+id/register_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="DNI"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
            android:id="@+id/register_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/nombres"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/register_lastnames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Apellidos"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

            <EditText
            android:id="@+id/register_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="Fecha de nacimiento"
            android:inputType="none"
            tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck" />
        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/correo"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize"/>
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/contrase_a"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize"/>


        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrarse"
            android:backgroundTint="@color/red"
            android:layout_marginTop="24dp"
            tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
